--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TurismoApp"
         tools:targetApi="31">
-        <activity android:name=".WebContentActivity"></activity>
-        <activity android:name=".SelectionActivity"></activity>
-        <activity android:name=".DestinationsActivity"></activity>
+        <activity android:name=".activity.WebContentActivity"></activity>
+        <activity android:name=".activity.SelectionActivity"></activity>
+        <activity android:name=".activity.DestinationsActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
