--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <!-- Android:icon y Android: rundIcon SIRVEN para cambiar icono de acceso -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_trip"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_trip"
         android:supportsRtl="true"
         android:theme="@style/Theme.TurismoApp"
         tools:targetApi="31">
         <activity android:name=".activity.WebContentActivity"></activity>
         <activity android:name=".activity.SelectionActivity"></activity>
         <activity android:name=".activity.DestinationsActivity"></activity>
+
         <activity
             android:name=".activity.MainActivity"
             android:exported="true">
